修改了整体数据对接

--- a/common/scss/global.scss
+++ b/common/scss/global.scss
@@ -23,7 +23,7 @@ view, text, input {
 	background-color: $page-bg-color1;
 }
 .nodata {
-	width: 750upx;
+	// width: 100%;
 	height: 100upx;
 	line-height: 100upx;
 	text-align: center;
