--- a/common/scss/variable.scss
+++ b/common/scss/variable.scss
@@ -37,7 +37,7 @@ $adorn-yellow: #FDC331;
 $split-line-color1: #525252;
 $split-line-color2: #E2E2E2;
 
-$page-bg-color5:#07224D;
+$page-bg-color5:#22211e;
 // 局部背景颜色
 $section-bg-color1: #393939;
 $section-bg-color2: #D9E0DD;
