--- a/common/scss/variable.scss
+++ b/common/scss/variable.scss
@@ -5,9 +5,9 @@ $theme-dark-color: #212121;
 // 白色
 $white: #E9E9F4;
 // 黑色
-$black: #000000;
+$black: #262631;
 // 亮灰色
-$light_gray: #dddddd;
+$light_gray: #9B9B9B;
 $light_gray1: #eeeeee;
 $light_gray2: #cccccc;
 
